Adicionado layout para filmes

--- a/app/Resources/views/default/cadastrar.html.twig
+++ b/app/Resources/views/default/cadastrar.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
-{% block body %}
-    <h1>Oi </h1>
-    {% endblock %}
+
+ {% block body %}ddsdsd{% endblock %}
+    
+    <title>{% block title %}Olá mundo!{% endblock %}</title>
