--- a/app/Resources/views/filmes/cadastro.html.twig
+++ b/app/Resources/views/filmes/cadastro.html.twig
@@ -6,5 +6,56 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Cadastro de Filme</h1>
+    <form class="form-horizontal">
+<fieldset>
+
+<!-- Form Name -->
+<legend>Novo Fime</legend>
+
+<!-- Text input-->
+<div class="form-group">
+  <label class="col-md-4 control-label" for="nome">Título</label>  
+  <div class="col-md-4">
+  <input id="nome" name="nome" type="text" placeholder="Título" class="form-control input-md" required="">
+  <span class="help-block">Digite o nome do filme</span>  
+  </div>
+</div>
+
+<!-- Select Basic -->
+<div class="form-group">
+  <label class="col-md-4 control-label" for="Gênero">Gênero</label>
+  <div class="col-md-4">
+    <select id="Gênero" name="Gênero" class="form-control">
+      <option value="1">Ação</option>
+      <option value="2">Terror</option>
+    </select>
+  </div>
+</div>
+
+<!-- Multiple Radios (inline) -->
+<div class="form-group">
+  <label class="col-md-4 control-label" for="lancamento">Lançamento</label>
+  <div class="col-md-4"> 
+    <label class="radio-inline" for="lancamento-0">
+      <input type="radio" name="lancamento" id="lancamento-0" value="1" checked="checked">
+      Sim
+    </label> 
+    <label class="radio-inline" for="lancamento-1">
+      <input type="radio" name="lancamento" id="lancamento-1" value="0">
+      Não
+    </label>
+  </div>
+</div>
+
+<!-- Button -->
+<div class="form-group">
+  <label class="col-md-4 control-label" for="salvar"></label>
+  <div class="col-md-4">
+    <button id="salvar" name="salvar" class="btn btn-primary">Salvar</button>
+  </div>
+</div>
+
+</fieldset>
+</form>
+
 {% endblock %}
