adicionado Modulo Clientes

--- a/app/Resources/views/filmes/genero-cadastro.html.twig
+++ b/app/Resources/views/filmes/genero-cadastro.html.twig
@@ -1,9 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Cadastro de Generos</h1>
-    
-    <form class="form-horizontal">
+{% block body %}    
+    <form class="form-horizontal" action="/filmes/genero/criar" method="POST">
 <fieldset>
 
 <!-- Form Name -->
@@ -22,7 +20,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="salvar"></label>
   <div class="col-md-4">
-    <button id="salvar" name="salvar" class="btn btn-primary">Salvar</button>
+    <button id="salvar" name="salvar" class="btn btn-primary" type="submit">Salvar</button>
   </div>
 </div>
 
