--- a/app/Resources/views/filmes/genero.html.twig
+++ b/app/Resources/views/filmes/genero.html.twig
@@ -2,6 +2,11 @@
 
 {% block body %}
     <h1>Gênero</h1>
+    <a href="{{path('genero_cadastro')}}" class="btn btn-primary pull-right">
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="glyphicon glyphicon-film"></span>
+                            Cadastrar Novo Gênero
+                        </a>
     <table class='table-bordered col-md-12'>
         <tr>
             <th>Nome</th>
