--- a/app/Resources/views/filmes/index.html.twig
+++ b/app/Resources/views/filmes/index.html.twig
@@ -57,12 +57,12 @@
 													<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
 												</a>
 												<div class="media-body">
-													<span class="media-meta pull-right">Febrero 13, 2016</span>
+													<span class="media-meta pull-right">Data</span>
 													<h4 class="title">
                                                                                                             {{ filme.nome }}
 														<span class="pull-right pagado">(Pagado)</span>
 													</h4>
-													<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
+													<p class="summary">{{filme.sinopse}}</p>
 												</div>
 											</div>
 										</td>
