--- a/app/Resources/views/cliente/show.html.twig
+++ b/app/Resources/views/cliente/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Cliente</h1>
 
-    <table>
+    <table class="table table-condensed">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -22,8 +22,8 @@
                 <td>{{ cliente.email }}</td>
             </tr>
             <tr>
-                <th>Datanascimento</th>
-                <td>{% if cliente.dataNascimento %}{{ cliente.dataNascimento|date('Y-m-d') }}{% endif %}</td>
+                <th>Data de nascimento</th>
+                <td>{% if cliente.dataNascimento %}{{ cliente.dataNascimento|date('d/m/Y') }}{% endif %}</td>
             </tr>
         </tbody>
     </table>
@@ -35,10 +35,6 @@
         <li>
             <a href="{{ path('cliente_edit', { 'id': cliente.id }) }}">Edit</a>
         </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
+        
     </ul>
 {% endblock %}
