--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
             <li class="active"><a href="{{path('homepage')}}">Home</a></li>
             <li><a href="{{path('filmes_index')}}">Filmes</a></li>
             <li><a href="{{path('genero_index')}}">Gênero</a></li>
-            <li><a href="#contact">Clientes</a></li>
+            <li><a href="{{path('cliente_index')}}">Clientes</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
