--- a/app/Resources/views/cliente/new.html.twig
+++ b/app/Resources/views/cliente/new.html.twig
@@ -1,16 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Cliente creation</h1>
+    <h1>Cadastro de Cliente</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
         <input type="submit" value="Create" />
     {{ form_end(form) }}
 
-    <ul>
         <li>
             <a href="{{ path('cliente_index') }}">Back to the list</a>
         </li>
-    </ul>
 {% endblock %}
