--- a/app/Resources/views/filmes/cadastro.html.twig
+++ b/app/Resources/views/filmes/cadastro.html.twig
@@ -1,61 +1,28 @@
 {% extends 'base.html.twig' %}
 
-    
+
 {% block title %}
     Filmes
 {% endblock %}
 
 {% block body %}
-    <form class="form-horizontal">
-<fieldset>
+    <fieldset>
+        <legend>Novo Filme</legend>
 
-<!-- Form Name -->
-<legend>Novo Fime</legend>
+        {{form_start(form_filmes)}}
+        {{form_widget(form_filmes)}}
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="nome">Título</label>  
-  <div class="col-md-4">
-  <input id="nome" name="nome" type="text" placeholder="Título" class="form-control input-md" required="">
-  <span class="help-block">Digite o nome do filme</span>  
-  </div>
-</div>
+        <button id="salvar" name="salvar" class="btn btn-primary pull-right" >Salvar</button>
 
-<!-- Select Basic -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="Gênero">Gênero</label>
-  <div class="col-md-4">
-    <select id="Gênero" name="Gênero" class="form-control">
-      <option value="1">Ação</option>
-      <option value="2">Terror</option>
-    </select>
-  </div>
-</div>
+        {{form_end(form_filmes)}}
+    </fieldset>
 
-<!-- Multiple Radios (inline) -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="lancamento">Lançamento</label>
-  <div class="col-md-4"> 
-    <label class="radio-inline" for="lancamento-0">
-      <input type="radio" name="lancamento" id="lancamento-0" value="1" checked="checked">
-      Sim
-    </label> 
-    <label class="radio-inline" for="lancamento-1">
-      <input type="radio" name="lancamento" id="lancamento-1" value="0">
-      Não
-    </label>
-  </div>
-</div>
+{% endblock %}
 
-<!-- Button -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="salvar"></label>
-  <div class="col-md-4">
-    <button id="salvar" name="salvar" class="btn btn-primary">Salvar</button>
-  </div>
-</div>
-
-</fieldset>
-</form>
-
+{% block javascripts %}
+    <script type="text/javascripot">
+        $(document).ready(function(){
+                    $('#filmes_genero').prepend('<option value="xxx">xxx</option>');
+        });
+    </script>
 {% endblock %}
