adicionado Modulo Clientes

--- a/app/Resources/views/filmes/cadastro.html.twig
+++ b/app/Resources/views/filmes/cadastro.html.twig
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script type="text/javascripot">
+    <script type="text/javascript">
         $(document).ready(function(){
                     $('#filmes_genero').prepend('<option value="xxx">xxx</option>');
         });
